services/omni/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni
  namespace: omni
spec:
  selector:
    app: omni
  ports:
    - name: https
      port: 443
      targetPort: 443
    - name: grpc
      port: 8090
      targetPort: 8090
    - name: event-sink
      port: 8091
      targetPort: 8091
    - name: k8s-proxy
      port: 8100
      targetPort: 8100
